2007-09-12 Fixed a Axes.bar unit bug - JDH

2007-09-10 Made skiprows=1 the default on csv2rec - JDH

2007-09-09 Split out the plotting part of pylab and put it in
           pyplot.py; removed numerix from the remaining pylab.py,
           which imports everything from pyplot.py.  The intention
           is that apart from cleanups, the result of importing
           from pylab is nearly unchanged, but there is the
           new alternative of importing from pyplot to get
           the state-engine graphics without all the numeric
           functions.
           Numpified examples; deleted two that were obsolete;
           modified some to use pyplot. - EF

2007-09-08 Eliminated gd and paint backends - EF

2007-09-06 .bmp file format is now longer an alias for .raw

2007-09-07 Added clip path support to pdf backend. - JKS

2007-09-06 Fixed a bug in the embedding of Type 1 fonts in PDF.
           Now it doesn't crash Preview.app. - JKS

2007-09-06 Refactored image saving code so that all GUI backends can
           save most image types.  See FILETYPES for a matrix of
           backends and their supported file types.
           Backend canvases should no longer write their own print_figure()
           method -- instead they should write a print_xxx method for
           each filetype they can output and add an entry to their
           class-scoped filetypes dictionary. - MGD

2007-09-05 Fixed Qt version reporting in setupext.py - DSD

2007-09-04 Embedding Type 1 fonts in PDF, and thus usetex support
           via dviread, sort of works. To test, enable it by
           renaming _draw_tex to draw_tex. - JKS

2007-09-03 Added ability of errorbar show limits via caret or
           arrowhead ends on the bars; patch by Manual Metz. - EF

2007-09-03 Created type1font.py, added features to AFM and FT2Font
           (see API_CHANGES), started work on embedding Type 1 fonts
           in pdf files. - JKS

2007-09-02 Continued work on dviread.py. - JKS
